# iot-hub

./: .env  .env.example  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  init-db.sql
.github/workflows/: ci.yml
migrations/: 20250730155333_create_users_table.sql  20250730161453_seed_dummy_data.sql  20250814155835_create_devices_table.sql  20250814155921_seed_dummy_devices.sql  20250824155758_create_readings_table.sql  20250824155904_seed_dummy_readings.sql
src/: api.rs  app_state.rs  auth.rs  domain.rs  dto.rs  error.rs  lib.rs  main.rs  repository.rs  service.rs  test_utils.rs
src/api/: devices.rs  error.rs  readings.rs  response.rs  users.rs
src/auth/: extractor.rs  jwt.rs  middleware.rs
src/domain/: device.rs  reading.rs  user.rs
src/dto/: auth.rs  device.rs  reading.rs  user.rs
src/repository/: device_repo.rs  reading_repo.rs  user_repo.rs
src/service/: device_service.rs  reading_service.rs  user_service.rs
tests/: common.rs  devices.rs  readings.rs  users.rs
tests/api/: users.rs
tests/integration/: common.rs  devices.rs  main.rs  readings.rs  users.rs
