[package]
name = "iot-monitoring-platform"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework & runtime
axum = "0.8.4"
tokio = { version = "1.46.1", features = ["full"] }

# Logging & tracing
tracing = "0.1.30"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Serde and JSON
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_with = "3.14.0"

[dev-dependencies]
tokio = { version = "1.46.1", features = ["full"] }

[[bin]]
name = "iot_monitoring_platform"
path = "src/main.rs"
