[package]
name = "iot-monitoring-platform"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.46.1", features = ["full"] }
async-trait = "0.1.88"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
headers = "0.4.1"
config = "0.15.13"
dotenvy = "0.15"
tracing = "0.1.30"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_with = "3.14.0"
jsonwebtoken = "9.3.1"
chrono = { version = "0.4.41", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.46.1", features = ["full"] }

[[bin]]
name = "iot_monitoring_platform"
path = "src/main.rs"
