[package]
name = "iot-hub"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.46.1", features = ["full"] }
async-trait = "0.1.88"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
headers = "0.4.1"
config = "0.15.13"
dotenvy = "0.15"
tracing = "0.1.30"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "fmt",
    "json",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_with = "3.14.0"
jsonwebtoken = "9.3.1"
chrono = { version = "0.4.41", features = ["serde"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
argon2 = "0.5.3"
password-hash = "0.5.0"
thiserror = "2.0.16"
tower-http = { version = "0.6.6", features = ["trace"] }

[dev-dependencies]
tower = "0.5.2"
tokio = { version = "1.46.1", features = ["full"] }
rand = "0.8"
serial_test = "3.2.0"
mockall = "0.13.1"
urlencoding = "2.1.3"
iot-hub = { path = ".", features = ["mock-auth"] }

[features]
default = []
mock-auth = []
